--- a/http_server/html/index.html
+++ b/http_server/html/index.html
@@ -8,7 +8,7 @@
         <audio id="audio-player" controls></audio>
         <script src="https://cdn.dashjs.org/v4.5.2/dash.all.min.js"></script>
         <script>
-            const url = "http://192.168.8.190:3000/stream";
+            const url = "/stream";
             const audioPlayerElement = document.getElementById('audio-player');
             const mediaPlayer = dashjs.MediaPlayer().create(); 
             mediaPlayer.initialize(audioPlayerElement, url, true);
